[tool.poetry]
name = "yasi"
version = "0.1.0"
description = "Atividade para iniciar desenvolvimento usando pygame."
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
